# c_c-

./: CMakeLists.txt  README.md  build.sh  testc.txt
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Debug/test_main/: Makefile  cmake_install.cmake
Mainfile/: CMakeLists.txt  main.cpp
cmake_sample/: CMakeLists.txt
cmake_sample/include/: CTest.h
cmake_sample/lib/: CMakeLists.txt
cmake_sample/lib/LOG_C/src/: CMakeLists.txt  LOG_C.cpp
cmake_sample/lib/LOG_CPP/include/: LOG_CPP.h
cmake_sample/lib/LOG_CPP/src/: CMakeLists.txt  LOG_CPP.cpp
cmake_sample/lib/LOG_SHARED/include/: LOG_SHARED.h
cmake_sample/lib/LOG_SHARED/src/: CMakeLists.txt  LOG_SHARED.cpp
cmake_sample/src/: CMakeLists.txt  CTest.cpp  main.cpp
test_C++/Test_function/: Test_function.cpp  Test_function.h
test_C++/Test_ptr/: Test_functionr.cpp  Test_functionr.h  Test_shared_ptr.h
test_DesignPattern/: CMakeLists.txt  DesighMain.cpp  README.txt
test_DesignPattern/inc/: Singleton.h
test_DesignPattern/src/: Singleton.cpp
test_main/: CMakeLists.txt  main.cpp
test_so/: cmake_struct.txt
toolchains/: debug.toolchain.cmake  release.toolchain.cmake
