cmake_minimum_required(VERSION 2.5)
project(MyTest)
set(top_dir ${PROJECT_SOURCE_DIR})
set(head_dir ${top_dir}/include)
set(source_dir ${top_dir}/src)
set(lib_dir ${top_dir}/lib)
set(EXECUTABLE_OUTPUT_PATH ${top_dir}/bin)
set(LIBRARY_OUTPUT_PATH ${top_dir}/lib)
link_directories(${lib_dir})
add_subdirectory(src)
add_subdirectory(lib)
